tests/Core/negative/test004.jvc
-- if on non-boolean

if 2 then 1 else 0
